--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.calc {
+  width: 200px;
+  height: 250px;
+  background-color: #444;
+  padding-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.screen {
+  width: 80%;
+  height: 25px;
+  background-color:black;
+  margin: 20px auto;
   color: white;
+  text-align: right;
 }
 
-.App-link {
-  color: #61dafb;
+.pad {
+  width: 160px;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pad button {
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+}
+
+.pad button.egale {
+  width: 80px;
+  height: 40px;
+  font-size: 22px;
 }
