--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
-.calc {
-  width: 200px;
-  height: 250px;
-  background-color: #444;
-  padding-top: 10px;
+html,body,#root,.App{
+  width: 100vw;
+  height: 100vh;
 }
 
+
+.calc {
+  width: 200px;
+  height: 270px;
+  background-color: #444;
+  /* padding-top: 10px; */
+  position: absolute;
+  margin-top: calc( 50vh - 135px);
+  margin-left: calc( 50vw - 100px);
+}
 
 .screen {
   width: 80%;
@@ -30,4 +38,10 @@
   width: 80px;
   height: 40px;
   font-size: 22px;
+}
+
+.bar {
+  width: 100%;
+  height: 20px;
+  background-color: teal;
 }
